# operant-lunarlander

./: Dockerfile  README.md  pyproject.toml
results/: comparison.json  granularity_sweep.json  operant_battery.json  training_returns.json
src/operant_lunarlander/: __init__.py  agents.py  ceiling.py  differentiate.py  featurizer.py  operant.py  schedules.py  skeleton.py
tests/: test_operant_lunarlander.py
