[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "operant-lunarlander"
version = "0.1.0"
description = "Differentiating reward-maximizing (law of effect) from descriptive melioration (matching law) on LunarLander-v3"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d]>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
ceiling = ["stable-baselines3>=2.0", "torch"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
